--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: grafana/grafana:8.2.6
     container_name: grafana
     volumes:
-      - grafana-vol3:/var/lib/grafana
+      - grafana-vol:/var/lib/grafana
     ports:
       - "3000:3000/tcp"
       # - "192.168.150.179/20:3000:3000"
@@ -55,7 +55,7 @@ services:
 volumes:
   postgres-vol:
     driver: local
-  grafana-vol3:
+  grafana-vol:
     driver: local
   pgadmin-vol:
     driver: local
